# Acoustic

./: CMakeLists.txt  README.md  compile.sh  run.sh
examples/: 1DParam.pro  1DSound.geo  2DMacro.geo  2DParam.pro  2DSound.geo  3DMacro.geo  3DSound.geo  config.conf
include/: Mesh.h  configParser.h  solver.h  utils.h
source/: Mesh.cpp  configParser.cpp  dgalerkin.cpp  solver.cpp  utils.cpp
